<resources>
    <string name="app_name">Reminder Application</string>
    <string name="login_activity_title">Login</string>
    <string name="add_activity_title">Create Notification</string>
    <string name="edit_activity_title">Edit Notification</string>
    <string name="action_settings">Settings</string>
    <string name="login_text">Login</string>
    <string name="save_reminder_text">Save</string>
    <string name="delete_reminder_text">Delete</string>
    <string name="channel_name">RemindersChannel</string>
    <string name="channel_description">Channel for transmitting reminders notification.</string>
    <string name="notification_title_expl">Notification title</string>
    <string name="notification_description_expl">Notification description</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="notification_repetition_expl">Repeat at xYxMxDxhxmxs. Default never</string>
    <string name="select_date_time">Select start date and time</string>
    <string name="edit_date_time">Edit start date and time</string>
</resources>
